--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -215,7 +215,7 @@
 
             <div>
               <span class="content-tag">Software</span>
-              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...</h3>
+              <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando prá...</h3>
             </div>       
           </article>
 
@@ -227,7 +227,7 @@
 
             <div>
               <span class="content-tag">Realidade Virtual</span>
-              <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...</h3>
+              <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma...</h3>
             </div>       
           </article>
 
@@ -239,7 +239,7 @@
 
             <div>
               <span class="content-tag">Criptomoedas</span>
-              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...</h3>
+              <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscan...</h3>
             </div>       
           </article>
 
@@ -251,7 +251,7 @@
 
             <div>
               <span class="content-tag">Drones</span>
-              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...</h3>
+              <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas rápidas...</h3>
             </div>       
           </article>
 
@@ -263,13 +263,13 @@
 
             <div>
               <span class="content-tag">Impressão 3D</span>
-              <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...</h3>
+              <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos...</h3>
             </div>       
           </article>
 
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 </html>
